Replace URLs with URIs
URIs include weird stuff like content://, mailto:, etc., but unlike
Uris, we have checked exceptions for syntax errors